--- a/insta/templates/signin.html
+++ b/insta/templates/signin.html
@@ -96,7 +96,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p class="capitalize"> © </p>
             </div>
         </div>
 
