--- a/insta/templates/signup.html
+++ b/insta/templates/signup.html
@@ -107,7 +107,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p class="capitalize"> © </p>
             </div>
         </div>
 
